--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
                     <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.theguardian.com/us" target="_blank">Visit The Guardian US Edition</a>
+                    <a class="nav-link" href="http://www.drudgereport.com/" target="_blank">Visit The Drudge Report/a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/JonathanBrownCFA" target="_blank">Github Repo</a>
@@ -17,8 +17,8 @@
     </div>
 
     <div class="jumbotron">
-        <h1 class="jumboheader">The Guardian US Scraper</h1>
-        <p class="lead">Scrape my favorite UK News site for the latest articles about what is going on in the world, from a slightly US vantage point</p>
+        <h1 class="jumboheader">The Drudge Report Scraper</h1>
+        <p class="lead">Scrape the new site for the latest articles about what is going on in the world</p>
         <p><a class="btn btn-lg btn-success" href="/scrape" role="button">Go Fetch !</a></p>
     </div>
 
