--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -6,7 +6,7 @@
           <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.theguardian.com/us" target="_blank">The Guardian US Edition</a>
+          <a class="nav-link" href="http://www.drudgereport.com/" target="_blank">The Drudge Report</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/JonathanBrownCFA" target="_blank">Github Repo for Jonathan Brown, CFA</a>
